# meleon

./: ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
examples/: demo_service_layer.py  example_alto.xml  example_page.xml  test_capabilities.py  test_full_pipeline.py  test_refactoring.py  test_simplified.py  test_workflows.py  test_working_example.py  usage_example.py
examples/test_data/: output_filtered.alto.xml  output_filtered.page.xml  sample1.xml  sample2.xml  sample_alto.xml
src/meleon/: __init__.py  batch.py  cli.py  config.py  main.py  processors.py  schemas.py  services.py  utils.py
src/meleon/converters/: __init__.py  narwhals_adapter.py
src/meleon/parsers/: __init__.py  alto.py  base.py  base_xml.py  pagexml.py
src/meleon/serializers/: __init__.py  alto.py  base.py  pagexml.py
